add button for registration